devour burger works

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,9 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 text-center" id="top-bar">
-      <img src="../public/assets/images/burger.jpg" alt="burger" />
+      <br>
+      <img src="../../public/assets/images/burger.jpg" alt="burger">
+      <br>
       <h1>Devour Burger</h1>
       <h2>I hope you're hungry!<h2>
     </div>
@@ -42,9 +44,11 @@
     <div class="col-xs-12 text-center enter_section">
       <form action="/burgers/create" method="POST">
         <input type="text" class="form-control" name="burger_name" value="" id="enter_text">
+        <br>
         <button type="submit" class="btn btn-primary" id="text-enter-button">Submit</button>
       </form>
-      <p>Enter a burger you want to eat Click the "Submit" button.</p>
+
+      <p>Hungry? Enter a burger you would like to devour and then click the Submit button.</p>
     </div>
   </div>
 </div>
